--- a/AccessSystem/AccessSystem/Forms/FormRequest/List.xaml
+++ b/AccessSystem/AccessSystem/Forms/FormRequest/List.xaml
@@ -4,9 +4,9 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:AccessSystem.Forms.FormRequest"
-      mc:Ignorable="d" 
+      mc:Ignorable="d" x:Name="ListRequest"
       d:DesignHeight="300" d:DesignWidth="300"
-      Title="List">
+      Title="Заявки">
     <Grid>
         <StackPanel>
             <Menu Style="{StaticResource Menu}">
