--- a/AccessSystem/AccessSystem/Forms/FormRequest/Object.xaml
+++ b/AccessSystem/AccessSystem/Forms/FormRequest/Object.xaml
@@ -4,9 +4,9 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:AccessSystem.Forms.FormRequest"
-      mc:Ignorable="d" 
+      mc:Ignorable="d" x:Name="ObjectRequest"
       d:DesignHeight="300" d:DesignWidth="350"
-      Title="Object">
+      Title="Заявка">
 
     <Grid>
         <StackPanel>
