--- a/AccessSystem/AccessSystem/MainWindow.xaml
+++ b/AccessSystem/AccessSystem/MainWindow.xaml
@@ -13,6 +13,7 @@
 
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="110"/>
+            <ColumnDefinition Width="4"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
@@ -20,10 +21,10 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <Grid ColumnSpan="2">
+        <Grid ColumnSpan="3">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="90"/>
+                <ColumnDefinition Width="1*"/>
+                <ColumnDefinition Width="140"/>
             </Grid.ColumnDefinitions>
             <Grid.Background>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
@@ -32,27 +33,28 @@
                 </LinearGradientBrush>
             </Grid.Background>
 
-            <Grid Grid.ColumnSpan="1">
+            <Grid Grid.Column="0">
                 <TextBlock x:Name="TextBlockTitle" Style="{StaticResource Title}">Система управления правами доступа</TextBlock>
             </Grid>
-            <Grid Grid.ColumnSpan="2">
+            <Grid Grid.Column="1">
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
                     <Button x:Name="ButtonMinimize" Style="{StaticResource WindowsMenuButtonBase}" Click="ButtonMinimize_Click">
                         <Button Style="{StaticResource WindowsMenuButtonMinimize}"/>
                     </Button>
-                    <Separator Width="3"/>
+                    <Separator  Background="{x:Null}" Width="3"/>
                     <Button x:Name="ButtonExpand" Style="{StaticResource WindowsMenuButtonBase}" Click="ButtonExpand_Click">
                         <Button Style="{StaticResource WindowsMenuButtonExpand}"/>
                     </Button>
-                    <Separator Width="3"/>
+                    <Separator Background="{x:Null}" Width="3"/>
                     <Button x:Name="ButtonAccount" Style="{StaticResource WindowsMenuButtonBase}">
                         <Button Style="{StaticResource WindowsMenuButtonAccount}"/>
                     </Button>
-                    <Separator Width="3"/>
+                    <Separator Background="{x:Null}" Width="3"/>
                     <Button x:Name="ButtonPower"  Style="{StaticResource WindowsMenuButtonBase}"  Click="ButtonPower_Click">
+                        
                         <Button Style="{StaticResource WindowsMenuButtonPower}"/>
                     </Button>
-                    <Separator Width="3"/>
+                    <Separator Background="{x:Null}" Width="3"/>
                 </StackPanel>
             </Grid>
         </Grid>
@@ -60,7 +62,8 @@
         <Grid Grid.Row="1">
             <Grid.RowDefinitions>
                 <RowDefinition Height="110"/>
-                <RowDefinition Height="*"/>
+                <RowDefinition Height="3"/>
+                <RowDefinition Height="1*"/>
             </Grid.RowDefinitions>
             <Grid.Background>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
@@ -68,16 +71,25 @@
                     <GradientStop Color="#FFFFEA8C" Offset="0.08"/>
                 </LinearGradientBrush>
             </Grid.Background>
-            <StackPanel Grid.RowSpan="2">
+            <StackPanel Grid.Row="0">
                 <Button x:Name="ButtonRequest" Content="Заявки доступа" Style="{StaticResource ButtonMenu}" Click="ButtonRequest_Click"/>
                 <Button x:Name="ButtonBase" Content="Базы данных" Style="{StaticResource ButtonMenu}" Click="ButtonBase_Click"/>
                 <Button x:Name="ButtonUser" Content="Пользователи" Style="{StaticResource ButtonMenu}"/>
             </StackPanel>
-            <StackPanel x:Name="StackPanelOpened" Grid.Row="1">
-                <Button Content="Заявки" Style="{StaticResource ButtonMenuOpened}"/>
-                <Button Content="Заявка 1" Style="{StaticResource ButtonMenuOpened}"/>
-                <Button Content="Заявка 2" Style="{StaticResource ButtonMenuOpened}"/>
+            <StackPanel Grid.Row="1">
+                <Separator Background="WhiteSmoke" Height="2"/>
+            </StackPanel>
+            <StackPanel x:Name="StackPanelOpened" Grid.Row="2">
            </StackPanel>
+        </Grid>
+
+        <Grid Grid.Column="1" Grid.Row="2">
+            <Grid.Background>
+                <LinearGradientBrush Opacity="0.75" EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="#FFDBFF60" Offset="0"/>
+                    <GradientStop Color="#FFFFEA8C" Offset="0.08"/>
+                </LinearGradientBrush>
+            </Grid.Background>
         </Grid>
 
         <Grid Grid.Column="2" Grid.Row="2">
@@ -88,10 +100,9 @@
                 </LinearGradientBrush>
             </Grid.Background>
             <StackPanel x:Name="StackPanelFrame" Orientation="Horizontal">
-                <GridSplitter Width="2"/>
+                
                 <Frame x:Name="FrameMain" NavigationUIVisibility="Hidden"/>
             </StackPanel>
-
         </Grid>
 
     </Grid>
