--- a/AccessSystem/AccessSystem/App.xaml
+++ b/AccessSystem/AccessSystem/App.xaml
@@ -2,139 +2,26 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:AccessSystem"
-           xmlns:materialDesing="http://materialdesigninxaml.net/winfx/xaml/themes"
-          StartupUri="MainWindow.xaml">
+             xmlns:valid="clr-namespace:AccessSystem.Validators"
+             xmlns:materialDesing="http://materialdesigninxaml.net/winfx/xaml/themes"
+             StartupUri="MainWindow.xaml">
     <Application.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
 
-        <!--Рабочий стол приложения. Заголовок-->
-        <Style TargetType="TextBlock" x:Key="Title">
-            <Setter Property="HorizontalAlignment" Value="Left"/>
-            <Setter Property="VerticalAlignment" Value="Center"/>
-            <Setter Property="Margin" Value="10,0,0,0"/>
-            <Setter Property="FontWeight" Value="Bold"/>
-            <Setter Property="Foreground" Value="DarkRed"/>
-        </Style>
+                <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Light.xaml" />
+                <!--<ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Defaults.xaml" />-->
+                <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/Recommended/Primary/MaterialDesignColor.DeepPurple.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/Recommended/Accent/MaterialDesignColor.Lime.xaml" />
+             
+                <ResourceDictionary Source="Resources/CommandPanel.xaml"/>
+                <ResourceDictionary Source="Resources/Forms.DatePicker.xaml"/>
+                <ResourceDictionary Source="Resources/Forms.Label.xaml"/>
+                <ResourceDictionary Source="Resources/Forms.TextBox.xaml"/>
+                <ResourceDictionary Source="Resources/MainMenu.xaml"/>
+                <ResourceDictionary Source="Resources/Separators.xaml"/>
 
-        <!--Рабочий стол приложения. Шапка-->
-        <Style TargetType="Button" x:Key="WindowsMenuButton">
-            <Setter Property="Height" Value="25"/>
-            <Setter Property="Width" Value="25"/>
-            <Setter Property="Background" Value="{x:Null}"/>
-            <Setter Property="BorderBrush" Value="{x:Null}"/>
-            <Setter Property="Foreground" Value="DarkRed"/>
-            <Setter Property="BorderThickness" Value="0"/>
-        </Style>
-        <Style TargetType="Button" x:Key="WindowsMenuButtonPower" BasedOn="{StaticResource WindowsMenuButton}">
-            <Setter Property="Content" Value="{materialDesing:PackIcon Kind=Power}"/>
-        </Style>
-        <Style TargetType="Button" x:Key="WindowsMenuButtonAccount" BasedOn="{StaticResource WindowsMenuButton}">
-            <Setter Property="Content" Value="{materialDesing:PackIcon Kind=Account}"/>
-        </Style>
-        <Style TargetType="Button" x:Key="WindowsMenuButtonMinimize" BasedOn="{StaticResource WindowsMenuButton}">
-            <Setter Property="Content" Value="{materialDesing:PackIcon Kind=WindowMinimize}"/>
-            <Setter Property="VerticalContentAlignment" Value="Bottom"/>
-        </Style>
-        <Style TargetType="Button" x:Key="WindowsMenuButtonExpand" BasedOn="{StaticResource WindowsMenuButton}">
-            <Setter Property="Content" Value="{materialDesing:PackIcon Kind=ArrowExpand}"/>
-        </Style>
-        <Style TargetType="Button" x:Key="WindowsMenuButtonBase" BasedOn="{StaticResource WindowsMenuButton}">
-            <Setter Property="Height" Value="30"/>
-            <Setter Property="Width" Value="30"/>
-            <Setter Property="BorderBrush" Value="Gray"/>
-            <Setter Property="BorderThickness" Value="1"/>
-        </Style>
-
-        <!--Рабочий стол приложения. Команды-->
-        
-        <!--    Основные комады-->
-        <Style TargetType="Button" x:Key="ButtonMenu">
-            <Setter Property="Height" Value="30"/>
-            <Setter Property="Margin" Value="5,5,5,0"/>
-            <Setter Property="Background" Value="{x:Null}"/>
-            <Setter Property="Foreground" Value="DarkRed"/>
-            <Setter Property="BorderBrush" Value="{x:Null}"/>
-            <Setter Property="FontWeight" Value="DemiBold"/>
-        </Style>
-        
-        <!--    Команды открытых форм-->
-        <Style TargetType="Button" x:Key="ButtonMenuOpened">
-            <Setter Property="Height" Value="20"/>
-            <Setter Property="Margin" Value="5,5,5,0"/>
-            <Setter Property="Background" Value="{x:Null}"/>
-            <Setter Property="Foreground" Value="DarkRed"/>
-            <Setter Property="BorderBrush" Value="{x:Null}"/>
-        </Style>
-
-        <!--Формы. Командная панель-->
-        <Style TargetType="Menu" x:Key="Menu">
-            <Setter Property="VerticalAlignment" Value="Top"/>
-            <Setter Property="Height" Value="30"/>
-            <Setter Property="Background">
-                <Setter.Value>
-                    <SolidColorBrush Color="#FFFFEA8C" Opacity="0.75"/>
-                </Setter.Value>
-            </Setter>
-            <Setter Property="Foreground" Value="DarkRed"/>
-            <Setter Property="FontWeight" Value="Bold"/>
-            <Setter Property="Margin" Value="5,5,5,0"/>
-        </Style>
-        <Style TargetType="MenuItem" x:Key="MenuItem">
-            <Setter Property="Height" Value="30"/>
-        </Style>
-
-        <!--Формы. Общие свойства элементов форм-->
-
-        <!--    TextBox-->
-        <Style TargetType="TextBox" x:Key="FormBaseTextBox">
-            <Setter Property="Background">
-                <Setter.Value>
-                    <SolidColorBrush Color="White" Opacity="0.75"/>
-                </Setter.Value>
-            </Setter>
-            <Setter Property="VerticalContentAlignment" Value="Center"/>
-        </Style>
-        <Style TargetType="TextBox" x:Key="FormTextBoxCode" BasedOn="{StaticResource FormBaseTextBox}">
-            <Setter Property="Width" Value="50"/>
-            <Setter Property="Text">
-                <Setter.Value>
-                    <Binding Path="Code">
-                        <Binding.ValidationRules>
-                            <ExceptionValidationRule/>
-                        </Binding.ValidationRules>
-                    </Binding>
-                </Setter.Value>
-            </Setter>
-        </Style>
-        <Style TargetType="TextBox" x:Key="FormTextBoxName" BasedOn="{StaticResource FormBaseTextBox}">
-            <Setter Property="Width" Value="200"/>
-        </Style>
-        <Style TargetType="TextBox" x:Key="FormTextBoxComment" BasedOn="{StaticResource FormBaseTextBox}">
-            <Setter Property="Width" Value="300"/>
-        </Style>
-
-        <!--    Label-->
-        <Style TargetType="Label" x:Key="FormBaseLabel">
-            <Setter Property="Width" Value="100"/>
-            <Setter Property="Background">
-                <Setter.Value>
-                    <SolidColorBrush Color="White" Opacity="0.75"/>
-                </Setter.Value>
-            </Setter>
-            <Setter Property="VerticalContentAlignment" Value="Center"/>
-        </Style>
-        <Style TargetType="Label" x:Key="FormBaseLabelDatePicker" BasedOn="{StaticResource FormBaseLabel}">
-            <Setter Property="Width" Value="25"/>
-        </Style>
-
-        <!--    DatePicker-->
-        <Style TargetType="DatePicker" x:Key="FormBaseDatePicker">
-            <Setter Property="Background">
-                <Setter.Value>
-                    <SolidColorBrush Color="White" Opacity="0.75"/>
-                </Setter.Value>
-            </Setter>
-            <Setter Property="SelectedDateFormat" Value="Long"/>
-        </Style>
-
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
