--- a/AccessSystem/AccessSystem/MainWindow.xaml
+++ b/AccessSystem/AccessSystem/MainWindow.xaml
@@ -3,6 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:materialDesing="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns:local="clr-namespace:AccessSystem"
         mc:Ignorable="d" x:Name="WorkWindow"
         Title="Система управления правами доступа" Height="400" Width="800"
