--- a/AccessSystem/AccessSystem/MainWindow.xaml
+++ b/AccessSystem/AccessSystem/MainWindow.xaml
@@ -22,17 +22,11 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <Grid ColumnSpan="3">
+        <Grid ColumnSpan="3" Style="{StaticResource BackgroundTool}">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="1*"/>
                 <ColumnDefinition Width="140"/>
             </Grid.ColumnDefinitions>
-            <Grid.Background>
-                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                    <GradientStop Color="#FFDBFF60" Offset="1"/>
-                    <GradientStop Color="#FF6F77C3" Offset="0.008"/>
-                </LinearGradientBrush>
-            </Grid.Background>
 
             <Grid Grid.Column="0">
                 <TextBlock x:Name="TextBlockTitle" Style="{StaticResource Title}">Система управления правами доступа</TextBlock>
@@ -42,35 +36,29 @@
                     <Button x:Name="ButtonMinimize" Style="{StaticResource WindowsMenuButtonBase}" Click="ButtonMinimize_Click">
                         <Button Style="{StaticResource WindowsMenuButtonMinimize}"/>
                     </Button>
-                    <Separator  Background="{x:Null}" Width="3"/>
+                    <Separator Style="{StaticResource SeparatorBetweenElement}"/>
                     <Button x:Name="ButtonExpand" Style="{StaticResource WindowsMenuButtonBase}" Click="ButtonExpand_Click">
                         <Button Style="{StaticResource WindowsMenuButtonExpand}"/>
                     </Button>
-                    <Separator Background="{x:Null}" Width="3"/>
+                    <Separator Style="{StaticResource SeparatorBetweenElement}"/>
                     <Button x:Name="ButtonAccount" Style="{StaticResource WindowsMenuButtonBase}">
                         <Button Style="{StaticResource WindowsMenuButtonAccount}"/>
                     </Button>
-                    <Separator Background="{x:Null}" Width="3"/>
+                    <Separator Style="{StaticResource SeparatorBetweenElement}"/>
                     <Button x:Name="ButtonPower"  Style="{StaticResource WindowsMenuButtonBase}"  Click="ButtonPower_Click">
                         <Button Style="{StaticResource WindowsMenuButtonPower}"/>
                     </Button>
-                    <Separator Background="{x:Null}" Width="3"/>
+                    <Separator Style="{StaticResource SeparatorBetweenElement}"/>
                 </StackPanel>
             </Grid>
         </Grid>
         <!--ToggleContent="Заявки доступа" -->
-        <Grid Grid.Row="1">
+        <Grid Grid.Row="1" Style="{StaticResource BackgroundWindow}">
             <Grid.RowDefinitions>
                 <RowDefinition Height="110"/>
                 <RowDefinition Height="3"/>
                 <RowDefinition Height="1*"/>
             </Grid.RowDefinitions>
-            <Grid.Background>
-                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                    <GradientStop Color="#FFDBFF60" Offset="0"/>
-                    <GradientStop Color="#FFFFEA8C" Offset="0.08"/>
-                </LinearGradientBrush>
-            </Grid.Background>
           
             <StackPanel x:Name="StackPanelLeft" Grid.Row="0">
                
@@ -126,13 +114,7 @@
             </Grid.Background>
         </Grid>
 
-        <Grid x:Name="Grid" Grid.Column="2" Grid.Row="2">
-            <Grid.Background>
-                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                    <GradientStop Color="#FFDBFF60" Offset="0"/>
-                    <GradientStop Color="#FFFFEA8C" Offset="0.08"/>
-                </LinearGradientBrush>
-            </Grid.Background>
+        <Grid x:Name="Grid" Grid.Column="2" Grid.Row="2" Style="{StaticResource BackgroundWindow}">
             <StackPanel x:Name="StackPanelFrame" Orientation="Horizontal">
                 <Frame x:Name="FrameMain" NavigationUIVisibility="Hidden"
                        Width="{Binding Path=ActualWidth, ElementName=Grid, Converter={local:ElementsFormConverter}, ConverterParameter='10'}"/>
