--- a/AccessSystem/AccessSystem/Forms/FormRequest/List.xaml
+++ b/AccessSystem/AccessSystem/Forms/FormRequest/List.xaml
@@ -5,6 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:AccessSystem.Forms.FormRequest"
       xmlns:as="clr-namespace:AccessSystem"
+      xmlns:asm="clr-namespace:AccessSystem.Models.Object"
       mc:Ignorable="d" x:Name="ListRequest"
       d:DesignHeight="300" d:DesignWidth="650"
       Title="Заявки">
@@ -19,8 +20,8 @@
             </Menu>
             <Separator Style="{StaticResource SeparatorBetweenRow}"/>
             <Grid x:Name="Grid" Margin="5,0,5,0">
-                <DataGrid x:Name="DataGridList"
-                    Width="{Binding Path=ActualWidth, ElementName=Grid, Converter={as:ElementsFormConverter}, ConverterParameter='10'}"/>
+                <DataGrid x:Name="DataGridList" ItemsSource="{Binding}"
+                          Width="{Binding Path=ActualWidth, ElementName=Grid, Converter={as:ElementsFormConverter}, ConverterParameter='10'}"/>
             </Grid>
         </StackPanel>
     </Grid>
