--- a/AccessSystem/AccessSystem/Resources/Forms.TextBox.xaml
+++ b/AccessSystem/AccessSystem/Resources/Forms.TextBox.xaml
@@ -24,10 +24,10 @@
         </Setter>
     </Style>
     <Style TargetType="TextBox" x:Key="FormTextBoxName" BasedOn="{StaticResource FormBaseTextBox}">
-        <Setter Property="Width" Value="200"/>
     </Style>
     <Style TargetType="TextBox" x:Key="FormTextBoxComment" BasedOn="{StaticResource FormBaseTextBox}">
-        <Setter Property="Width" Value="300"/>
+    </Style>
+    <Style TargetType="TextBox" x:Key="FormTextBoxConnectionURI" BasedOn="{StaticResource FormBaseTextBox}">
     </Style>
 
 </ResourceDictionary>
