--- a/AccessSystem/AccessSystem/Resources/Forms.DatePicker.xaml
+++ b/AccessSystem/AccessSystem/Resources/Forms.DatePicker.xaml
@@ -5,7 +5,7 @@
     <Style TargetType="DatePicker" x:Key="DatePickerFormBase">
         <Setter Property="Background">
             <Setter.Value>
-                <SolidColorBrush Color="White" Opacity="0.75"/>
+                <SolidColorBrush Color="WhiteSmoke" Opacity="0.75"/>
             </Setter.Value>
         </Setter>
         <Setter Property="SelectedDateFormat" Value="Long"/>
