--- a/AccessSystem/AccessSystem/Resources/Forms.Label.xaml
+++ b/AccessSystem/AccessSystem/Resources/Forms.Label.xaml
@@ -6,7 +6,7 @@
         <Setter Property="Width" Value="110"/>
         <Setter Property="Background">
             <Setter.Value>
-                <SolidColorBrush Color="White" Opacity="0.75"/>
+                <SolidColorBrush Color="WhiteSmoke" Opacity="0.75"/>
             </Setter.Value>
         </Setter>
         <Setter Property="VerticalContentAlignment" Value="Center"/>
